[tool.poetry]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
description = "A library for creating GraphQL APIs"
keywords = ["grapqhl", "api", "rest", "starlette", "async"]
license = "MIT"
name = "strawberry-graphql"
packages = [{include = "strawberry"}]
readme = "README.md"
version = "0.53.1"

documentation = "https://strawberry.rocks/"
homepage = "https://strawberry.rocks/"
repository = "https://github.com/strawberry-graphql/strawberry"

classifiers = [
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["strawberry/py.typed"]

[tool.poetry.dependencies]
asgiref = {version = "^3.2", optional = true}
cached-property = "^1.5.2"
click = {version = "^7.0", optional = true}
django = {version = ">=2,<4", optional = true}
flask = {version = "^1.1", optional = true}
graphql-core = {version = "^3.1.0"}
hupper = "^1.5"
opentelemetry-api = {version = "^0.17b0", optional = true}
opentelemetry-sdk = {version = "^0.17b0", optional = true}
pydantic = {version = "^1.6.1", optional = true}
pygments = "^2.3"
python = "^3.7"
python-dateutil = "^2.7.0"
python-multipart = "^0.0.5"
sanic = {version = "^20.12.2", optional = true}
starlette = ">=0.13.6,<0.15.0"
typing_extensions = "^3.7.4"
uvicorn = {version = ">=0.11.6,<0.14.0", optional = true}

[tool.poetry.dev-dependencies]
asgiref = "^3.2"
black = {version = "^20.8b1", allow-prereleases = true}
django = {version = ">=2,<4", optional = false}
email-validator = {version = "^1.1.2", optional = false}
flake8 = "^3.9"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flask = {version = "^1.1"}
freezegun = "^1.1.0"
isort = "^5.8.0"
mypy = "^0.812"
opentelemetry-api = "^0.17b0"
opentelemetry-sdk = "^0.17b0"
pdbpp = "^0.10.2"
pre-commit = "^2.11.1"
promise = "^2.3"
pydantic = {version = "^1.6.1", optional = false}
pytest = "^6.2"
pytest-asyncio = "^0.14.0"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.11"
pytest-django = {version = "^4.1"}
pytest-emoji = "^0.2.0"
pytest-flask = {version = "^1.2.0"}
pytest-mock = "^3.5"
pytest-mypy-plugins = "^1.6"
requests = "^2.25.1"
sanic = "^20.12.2"
uvicorn = ">=0.11.6,<0.14.0"

[tool.poetry.extras]
debug-server = ["uvicorn"]
django = ["django", "pytest-django", "asgiref"]
flask = ["flask", "pytest-flask"]
opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]
pydantic = ["pydantic"]
sanic = ["sanic"]

[tool.poetry.scripts]
strawberry = "strawberry.cli:run"

[tool.isort]
combine_as_imports = true
combine_star = true
indent = 4
known_django = ["django"]
known_first_party = ["strawberry"]
known_graphql = ["graphql"]
known_pytest = ["pytest"]
lines_after_imports = 2
profile = "black"
sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "DJANGO", "GRAPHQL", "FIRSTPARTY", "LOCALFOLDER"]
src_paths = ["strawberry", "tests", "scripts"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django.django_settings"
addopts = "-s --emoji --mypy-ini-file=mypy_tests.ini --benchmark-disable"
testpaths = ["tests/"]
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
